@@ -1,3 +1,7 @@
+svn HEAD
+ Bugfixes
+ * Uploads to folders supported for more recent versions of gdata-python-client
+
 version 0.9.7
  Enhancements:
  * Command history added to interactive mode (Thanks, aripollak!)
